@@ -1,3 +1,15 @@
+2002-11-10 20:52  chris
+
+	* Template.pm: Fix nested loop behavior
+
+2002-11-10 20:06  chris
+
+	* Template.pm: Add clearLoop() function
+
+2002-11-08 21:19  chris
+
+	* Template.pm: v0.75 Make the #include syntax be overloadable
+
 2002-11-08 20:51  chris
 
 	* Template.pm: v0.74 Fix the loop-out replace Speed up the pattern
